envoy/trino-envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8453
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: trino_proxy
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: trino_coordinator
                            timeout:
                              seconds: 3600
                http_filters:
                - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /opt/certs/trino-proxy/bundle.crt
                    private_key:
                      filename: /opt/certs/trino-proxy/server.rsa.key

  clusters:
    - name: trino_coordinator
      connect_timeout: 30s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http_protocol_options: {}
      load_assignment:
        cluster_name: trino_coordinator
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  #host.docker.internal
                  address: coordinator
                  port_value: 8443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: coordinator
          allow_renegotiation: true
          common_tls_context:
            validation_context:
              match_subject_alt_names:
                - exact: "coordinator"
              trusted_ca:
                filename: /opt/certs/trino.crt
